# waiswallet2026

./: .env.example  .env.local  AI_SYSTEM_GUIDE.md  CHAT_GUIDE.md  Dockerfile  GEMINI_MIGRATION_GUIDE.md  HOW_IT_WORKS.md  README.md  benchmark_results.json  dashboard_diagnostic.sql  debug_wallet_update.py  docker-compose.yml  main.py  opik_llm_judge.ipynb  opik_llm_judge_gemini.py  pyproject.toml  reconcile_wallets.py  reproduce_error.py  run.sh  test_api.py  test_assumptions.py  test_efficiency.py  test_greeting.py  test_multi_turn.py  test_perf.py  test_prompt_benchmark.py  test_sql.py  test_strategy.py
app/: main.py
app/agents/: dependencies.py  pilot.py  prompt_versions.py  prompts.py  simulation.py
app/core/: exceptions.py  logger.py
app/data/: database.md  database_compact.md  waiswallet.db
app/data/initialize/: 1_create_db.sql  2_triggers_db.sql  3_insert_records.sql  initialiize_db.py  (+4 more)
app/db/: connection.py  test_connection.py  verify_schema.py
app/models/: transactions.py
app/routers/: api.py  chat.py  simulation.py
app/utils/: __init__.py  wallet_benefits.py
frontend/: App.tsx  README.md  index.html  index.tsx.bak  metadata.json  package-lock.json  package.json
frontend/css/: styles.css
frontend/js/: app.js
frontend/services/: geminiService.js  geminiService.ts
frontend/src/: main.ts  state.ts  types.ts  utils.ts
guide/: cashback_guide.md  dashboard_guide.md  goals_guide.md  history_guide.md  modals_guide.md  recommendations_guide.md  reports_guide.md  settings_guide.md  simulation_guide.md  system_overview.md  wallets_guide.md
(+14 files in other folders)
